--- a/FMS.BLTest/FMS.BLTest.csproj
+++ b/FMS.BLTest/FMS.BLTest.csproj
@@ -46,6 +46,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FilmTest.cs" />
@@ -58,6 +59,10 @@
     <ProjectReference Include="..\FMS.BL\FMS.BL.csproj">
       <Project>{349cf470-89b4-4459-9df3-bac4941d4814}</Project>
       <Name>FMS.BL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\FMS.DA\FMS.DA.csproj">
+      <Project>{80568f8d-1b65-45db-854e-a8610014beb0}</Project>
+      <Name>FMS.DA</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
